--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -103,8 +103,10 @@ dataSource:
 environments:
     development:
         dataSource:
-            dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            dbCreate: update
+            url: jdbc:h2:./data/expenseSheetDB;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+#            dbCreate: create-drop
+#            url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     test:
         dataSource:
             dbCreate: update
@@ -131,3 +133,11 @@ environments:
                 testOnReturn: false
                 jdbcInterceptors: ConnectionState
                 defaultTransactionIsolation: 2 # TRANSACTION_READ_COMMITTED
+
+        dataSources:
+            expenseSheetDB:
+                driverClassName: org.h2.Driver
+                username: sa
+                password: ''
+                url: jdbc:h2:./data/expenseSheetDB
+                dbCreate: update
