--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -106,7 +106,7 @@ environments:
             dbCreate: update
             url: jdbc:h2:./data/expenseSheetDB;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
 #            dbCreate: create-drop
-#            url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+#            url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE expenseSheetDB
     test:
         dataSource:
             dbCreate: update
